Added handling approved and unapproved entities
