# src/BookBarter.React/src/api/generated/swagger.json
@@ -934,6 +934,13 @@
               "type": "integer",
               "format": "int32"
             }
+          },
+          {
+            "name": "excludeUnapprovedBooks",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
